[gd_scene load_steps=9 format=2]

[ext_resource path="res://effects/outline.shader" type="Shader" id=1]
[ext_resource path="res://models/interactable/interactable.gd" type="Script" id=2]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/enabled = false
shader_param/outline_width = 1.0
shader_param/outline_color = Color( 0.2, 0.2, 0.78, 0.77 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.98, 0.6, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="CircleShape2D" id=3]
resource_local_to_scene = true
radius = 128.0

[sub_resource type="CircleShape2D" id=4]
resource_local_to_scene = true
radius = 96.0

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/outline_width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 2.5, 1.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:material:shader_param/outline_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.2, 0.2, 0.776471, 0.768627 ), Color( 0.133333, 0.658824, 0.972549, 1 ), Color( 0.2, 0.2, 0.776471, 0.768627 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/outline_width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:material:shader_param/outline_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Color( 0.501961, 0.501961, 0.8, 0.501961 ) ]
}

[node name="Interactable" type="Node2D"]
script = ExtResource( 2 )
click_radius = 96

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0.000412017, -0.000498772 )

[node name="Control" type="Control" parent="."]
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Control"]
visible = false
light_mask = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
mouse_filter = 2
custom_styles/fg = SubResource( 2 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HintArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HintArea"]
shape = SubResource( 3 )

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hint_entered = SubResource( 5 )
anims/hint_exited = SubResource( 6 )
[connection signal="body_entered" from="HintArea" to="." method="_on_HintArea_body_entered"]
[connection signal="body_exited" from="HintArea" to="." method="_on_HintArea_body_exited"]
[connection signal="body_entered" from="ClickArea" to="." method="_on_ClickArea_body_entered"]
[connection signal="body_exited" from="ClickArea" to="." method="_on_ClickArea_body_exited"]
[connection signal="input_event" from="ClickArea" to="." method="_on_ClickArea_input_event"]
